# poc-python-sqlalchemy-N-to-N-table

./: README.md  pyproject.toml
src/: database.py  main.py  mapper.py  pyproject.toml
src/group/: group_mapper.py  group_model.py  group_router.py
src/test/: test_database.py
src/user/: user_mapper.py  user_model.py  user_router.py  user_service.py
