[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Lua Govinda Mendes Souza <govinda.souza@mercadolivre.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.22"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
